fixed overflow issue with stickers, new skirt interaction, new skirt UI

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -10,8 +10,13 @@ body {
   font-family: 'Lora', serif;
   font-style: normal;
   margin: 0;
-  overflow-x: hidden;
+  position: absolute;
   cursor: url("../images/cuteshit/cursor-vaporwavenormal.cur"), default;
+}
+#body {
+  position: relative;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 a {
@@ -149,7 +154,8 @@ h1, h2, h3, h4, h5, label {
 
 /*#CONTAINER is the rectangle that contains everything but the background!*/
 #container {
-  margin: 3em auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 90%;
 	max-width: 700px;
   color: #151515; 
