--- a/src/threejs/style/skirt.css
+++ b/src/threejs/style/skirt.css
@@ -23,6 +23,14 @@ button {
 	text-transform: uppercase;
 }
 
+canvas {
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	pointer-events: none;
+}
+
 #info {
 	position: absolute;
 	top: 0px;
